# oc_ds_converter

./: .gitignore  CHANGELOG.md  README.md  REUSE.toml  crossref_cache.json  pyproject.toml
.github/workflows/: deploy-coverage.yml  run_tests.yml
oc_ds_converter/: metadata_manager.py  ra_processor.py
oc_ds_converter/crossref/: crossref_processing.py  crossref_processing_old.py  extract_crossref_publishers.py  get_not_crossref_ref.py
oc_ds_converter/crossref/data/: publishers.csv
oc_ds_converter/datacite/: datacite_processing.py  datacite_processing_new.py
oc_ds_converter/datasource/: config.ini  datasource.py  orcid_index.py  redis.py
oc_ds_converter/jalc/: jalc_processing.py
oc_ds_converter/lib/: cleaner.py  console.py  crossref_style_processing.py  csvmanager.py  file_manager.py  jsonmanager.py  master_of_regex.py  process_utils.py
oc_ds_converter/medra/: medra_processing.py
oc_ds_converter/oc_idmanager/: __init__.py  arxiv.py  base.py  crossref.py  doi.py  isbn.py  issn.py  jid.py  metadata_manager.py  openalex.py  orcid.py  pmcid.py  pmid.py  ror.py  support.py  url.py  viaf.py  wikidata.py  wikipedia.py
oc_ds_converter/oc_idmanager/oc_data_storage/: batch_manager.py  in_memory_manager.py  redis_manager.py  sqlite_manager.py  storage_manager.py
oc_ds_converter/openaire/: openaire_processing.py
oc_ds_converter/preprocessing/: base.py  datacite.py  datacite_new.py  jalc.py  nih.py
oc_ds_converter/pubmed/: finder_nih.py  get_publishers.py  pubmed_processing.py
oc_ds_converter/pubmed/support_files/: issn_jour_ext.json  prefix_publishers.json
oc_ds_converter/run/: README.md  crossref_process.py  datacite_process.py  datacite_process_new.py  jalc_process.py  openaire_process.py  pubmed_process.py  pubmed_process_new.py  zotero_process.py
oc_ds_converter/zotero/: zotero_processing.py
scripts_analysis/jalc_entities_citations_count/: count.py
scripts_analysis/jalc_languages_metadata/: information_loss.py  jalc_languages_metadata_count.py
scripts_analysis/jalc_languages_metadata/test/: conta_test.py
test/: arxiv_idmanager_test.py  conftest.py  crossref_process_test.py  crossref_processing_test.py  datacite_process_test.py  datacite_process_test_new.py  datacite_processing_test.py  datacite_processing_test_new.py  extract_crossref_publishers_test.py  file_manager_test.py  get_pub_test.py  idm_arxiv_test.py  idm_crossref_test.py  idm_doi_test.py  idm_isbn_test.py  idm_issn_test.py  idm_jid_test.py  idm_openalex_test.py  idm_orcid_test.py  idm_pmc_test.py  idm_pmid_test.py  idm_ror_test.py  idm_viaf_test.py  idm_wikidata_test.py  jalc_process_test.py  jalc_processing_test.py  medra_processing_test.py  oc_idmanager_test.py  openaire_process_test.py  orcid_index_test.py  preprocessing_jalc_test.py  preprocessing_test.py  processing_crossref_test.py  processing_datacite_test.py  processing_medra_test.py  processing_oroci_test.py  pubmed_process_test.py  pubmed_processing_test.py  storage_m_redis_test.py
test/coverage/: .coverage  .coveragerc
test/crossref_processing/: 0.json
test/crossref_processing/iod/: iod.csv
test/crossref_processing/meta_input/: 30719.csv  40228.csv
test/data/: glob.json
test/datacite_process/jsonFiles/: jSonFile_1.json  jSonFile_2.json
test/datacite_processing/: datacite_processing_test.py  jSonFile_1_new_dump.json  sample_datacite.ndjson
test/jalc_processing/: dois_1011230-jsts172_1.json
test/zotero_process/: zotero_test1.json
(+19 files in other folders)
