[project]
name = "oc-ds-converter"
version = "1.0.4"
description = "A library for converting metadata provided by various data sources, e.g. Crossref, DataCite, JaLC, and mEDRA, into the format used by OpenCitations Meta."
authors = [
    { name = "Arcangelo Massari", email = "arcangelo.massari@unibo.it" },
    { name = "Arianna Moretti", email = "arianna.moretti4@unibo.it" },
    { name = "Marta Soricetti", email = "marta.soricetti@unibo.it" },
    { name = "Elia Rizzetto", email = "elia.rizzetto2@unibo.it" },
    { name = "Ivan Heibi", email = "ivan.heibi2@unibo.it" },
]
license = "ISC"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fakeredis>=2.34.1",
    "filelock>=3.19.1",
    "lxml>=4.9.2,<6.0.0",
    "ndjson>=0.3.1",
    "pandas>=2.3.3",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "tqdm>=4.67.3",
    "validators>=0.35.0",
    "xmltodict>=1.0.4",
    "zstandard>=0.25.0",
]

[project.scripts]
test = "test.run_all_tests:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oc_ds_converter"]

[dependency-groups]
dev = [
    "coverage>=7.10.7",
    "pyright>=1.1.408",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "responses>=0.26.0",
    "ruff>=0.15.5",
]
